[gd_scene load_steps=3 format=3 uid="uid://dtgqev2rsa5cb"]

[ext_resource type="Script" uid="uid://cwibip4ct10tg" path="res://player/air_area_damage.gd" id="1_j456x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hhrp3"]
radius = 143.003

[node name="air_area_damage" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_j456x")
damage = 3.0

[node name="attack_collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hhrp3")

[node name="timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
